2012-10-10  Jean-Louis Martineau <martineau@zmanda.com>
	* */*.c: Fix bug found by Coverity.

2012-10-10  Jean-Louis Martineau <martineau@zmanda.com>
	* */*.c: Fix bug found by Coverity.

2012-10-09  Jean-Louis Martineau <martineau@zmanda.com>
	* oldrecover-src/amrecover.c: Solaris do not have sa_restorer.

2012-10-09  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c, amar-src/amarchiver.c,
	  client-src/selfcheck.c, common-src/bsd-security.c,
	  common-src/util.c, device-src/device.c,
	  device-src/ndmp-device.c, device-src/s3.c,
	  device-src/tape-device.c, oldrecover-src/amrecover.c,
	  recover-src/extract_list.c, recover-src/set_commands.c,
	  server-src/diskfile.c, server-src/driver.c,
	  server-src/planner.c: Fix bug found by Coverity.

2012-10-09  Jean-Louis Martineau <martineau@zmanda.com>
	* example/Makefile.am: Build amanda-CAStor.conf from
	  amanda-CAStor.conf.in
	* example/template.d/amanda-CAStor.conf: Remove
	* example/template.d/amanda-CAStor.conf.in: New file.

2012-10-05  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Change the security_stream_read callback
	  to not release the event if the read succeed.
	* amandad-src/amandad.c, common-src/amservice.c,
	  recover-src/extract_list.c, server-src/dumper.c: Do not restart
	  security_stream_read if the read succeeded.
	* server-src/dumper.c: Handle timeout without starting too much event.

2012-10-05  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/tape-device.c: Solaris do not have GMT_WR_PROT.

2012-10-05  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/device.c (device_check_writable): New method.
	* device-src/device.h (device_check_writable): Prototype.
	* device-src/tape-device.c (tape_device_check_writable): Implement new
	  method.
	* perl/Amanda/Device.swg (check_writable): New method.
	* server-src/amcheck-device.pl: Call check_writable.
	* server-src/amtape.pl: Call check_writable.
